[gd_scene load_steps=8 format=3 uid="uid://ckaboqsa6o5du"]

[ext_resource type="Script" uid="uid://ba71vxiilg51n" path="res://screens/levels_menu/stalingrad_summer_camp/popups/allies_popup/ally_level_selector/ally_level_selector.gd" id="1_0voy8"]
[ext_resource type="Texture2D" uid="uid://bcr53sx666gwj" path="res://screens/levels_menu/stalingrad_summer_camp/popups/allies_popup/ally_level_selector/assets/right_panel.png" id="2_uhguq"]
[ext_resource type="PackedScene" uid="uid://bt745ggmh0k62" path="res://screens/levels_menu/stalingrad_summer_camp/popups/allies_popup/ally_level_selector/ally_lvl_btn/ally_lvl_btn.tscn" id="3_1psa4"]
[ext_resource type="Resource" uid="uid://1km0gtdvwxfa" path="res://data/game_characters/allies/shooter_ally/bayonete_soldier/levels/bys_p1.tres" id="4_2a4fv"]
[ext_resource type="Resource" uid="uid://bhujfj5cpw65g" path="res://data/game_characters/allies/shooter_ally/bayonete_soldier/levels/bys_p2.tres" id="5_c150j"]
[ext_resource type="Resource" uid="uid://chy6mh66nr66" path="res://data/game_characters/allies/shooter_ally/bayonete_soldier/levels/bys_p3.tres" id="6_h0mk1"]

[sub_resource type="GDScript" id="GDScript_uhguq"]
script/source = "class_name LevelBtnsContainer extends GridContainer
"

[node name="AllyLevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0voy8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_uhguq")

[node name="LevelName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 103.0
offset_top = 60.0
offset_right = 143.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Bronze Medal Shot"

[node name="LevelDescription" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 151.0
offset_right = 607.0
offset_bottom = 261.0
theme_override_font_sizes/font_size = 30
text = "Description"
autowrap_mode = 3

[node name="LevelBtnsContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 244.0
offset_top = 261.0
offset_right = 603.0
offset_bottom = 563.0
theme_override_constants/h_separation = 22
theme_override_constants/v_separation = 22
columns = 3
script = SubResource("GDScript_uhguq")

[node name="AllyLvlBtn" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2
ally_level = ExtResource("4_2a4fv")

[node name="AllyLvlBtn2" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2
ally_level = ExtResource("5_c150j")

[node name="AllyLvlBtn3" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2
ally_level = ExtResource("6_h0mk1")

[node name="AllyLvlBtn4" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn5" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn6" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn7" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn8" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn9" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn10" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn11" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2

[node name="AllyLvlBtn12" parent="LevelBtnsContainer" instance=ExtResource("3_1psa4")]
layout_mode = 2
